--- a/src/main/webapp/WEB-INF/addAuthor.html
+++ b/src/main/webapp/WEB-INF/addAuthor.html
@@ -73,7 +73,7 @@ th,td {
 		        success: function(data){
 			        if (data==true) {
 			        	alert("Succesfully registered");
-			        	setTimeout(function(){alert(window.location.href = "/bookface/books")},1000);
+			        	setTimeout(function(){alert(window.location.href = "/bookface/main")},1000);
 			        } else {
 			        	alert("Author already registered");
 					}
