--- a/src/main/webapp/WEB-INF/login.html
+++ b/src/main/webapp/WEB-INF/login.html
@@ -23,8 +23,7 @@
 			<tbody>
 				<tr align="center">
 					<td align="center">
-						<div id="wrapper_dark_gray"
-							style="height: 634px; width: 1080px; padding-top: 20px;">
+						<div style="height: 634px; width: 1080px; padding-top: 20px;">
 							<div style="display: inline; width: 100%">
 								<span style="display: inline; font-size: 18px;"
 									th:text="#{welcometo}"> Welcome to <b
@@ -32,8 +31,7 @@
 								</b>
 								</span>
 							</div>
-							<div id="wrapper_light_gray"
-								style="height: 150px; width: 1060px; margin-top: 30px;">
+							<div style="height: 150px; width: 1060px; margin-top: 30px;">
 								<form name="login-form" action="j_spring_security_check"
 									method="post" style="width: 100%;">
 									<span
