--- a/src/main/webapp/WEB-INF/author.html
+++ b/src/main/webapp/WEB-INF/author.html
@@ -1,10 +1,100 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<!DOCTYPE html>
+<html lang="en" xmlns:sec="http://www.thymeleaf.org"
+	xmlns:tiles="http://www.thymeleaf.org"
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
+<meta content="text/html; charset=ISO-8859-1" http-equiv="Content-Type"></meta>
+<script src="http://ajax.cdnjs.com/ajax/libs/json2/20110223/json2.js"></script>
+<script
+	src='http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.js'></script>
+<script
+	src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.js'></script>
+<style>
+table,th,td {
+	border: 1px solid black;
+	border-collapse: collapse;
+}
 
+th,td {
+	padding: 5px;
+	text-align: left;
+}
+
+table#tbl {
+	width: 100%;
+	background-color: #f1f1c1;
+}
+table#tbl1 {
+	width: 100%;
+	background-color: #f0f8ff;
+}
+</style>
+</head>
+<body tiles:fragment="content" bgcolor="#ffffff">
+	<div class="background"
+		style="margin-left: auto; margin-right: auto; margin-top: 0px; margin-bottom: 0px; max-width: 1120px;">
+		<h1 id="auth" align="center" th:text="${author}">Author</h1>
+		<table id="tbl1">
+			<tr>
+				<td>
+					<div id="ref"
+						style="display: inline; margin-left: 10px; float: left; width: 130px;">
+					</div>
+				</td>
+				<td>
+					<div
+						style="display: inline; margin-left: 10px; float: left; width: 130px;">
+						<a href="#" th:href="@{/main}"
+							th:text="#{main}"> Main page </a>
+					</div>
+				</td>
+			</tr>
+		</table>
+		<table id="tbl" border="1" style="width: 100%">
+			<tr>
+				<td>Biography</td>
+				<td id="bio"></td>
+			</tr>
+			<tr>
+				<td>Books</td>
+				<td id="bs"></td>
+			</tr>
+		</table>
+	</div>
+	<script type="text/javascript">
+	<!--
+		$(document).ready(function() {
+			var text="<a href='#' th:href='@{/book/addBook/"+$('#auth').html()+"}' th:text='#{addBook}'> Add Book </a>"
+			$('#ref').append("<a href='/bookface/book/addBook/"+$('#auth').html().replace(/ /g, '_')+"' th:href='@{/book/addBook/"+$('#auth').html()+"}' th:text='#{addBook}'> Add Book </a>");
+			getAllData();
+		});
+
+		function getAllData(){
+		    $.ajax({
+		        type: 'GET',
+		        url: "getAllAuthor?author="+ $('#auth').html(),
+		        dataType: "json",
+		        success: function(data){
+		        	createTableDinamically(data);
+		        },
+		        error : function(jqXHR, status, error) {
+		           alert('Sorry!, there was a problem');
+		        },
+		    });
+		}
+
+		function createTableDinamically(res){
+			$('#bio').append(res.bio.replace(/_/g, ' '));
+			var text="<ul>"
+			for (j = 0; j < res.books.length; j++) {
+	             text=text.concat("<li>"+res.books[j].book+ "</li>");
+	         }
+			text=text.concat("</ul>");
+			$('#bs').append(text);
+		}
+	-->
+	</script>
 </body>
 </html>
+
