--- a/src/main/webapp/WEB-INF/author.html
+++ b/src/main/webapp/WEB-INF/author.html
@@ -34,7 +34,7 @@ table#tbl1 {
 <body tiles:fragment="content" bgcolor="#ffffff">
 	<div class="background"
 		style="margin-left: auto; margin-right: auto; margin-top: 0px; margin-bottom: 0px; max-width: 1120px;">
-		<h1 id="auth" align="center" th:text="${author}">Author</h1>
+		<h1 id="auth" align="center" th:text="${author}" style="color: red;">Author</h1>
 		<table id="tbl1">
 			<tr>
 				<td>
