--- a/src/main/webapp/WEB-INF/likes.html
+++ b/src/main/webapp/WEB-INF/likes.html
@@ -35,22 +35,11 @@ table#tbl2 {
 <body tiles:fragment="content" bgcolor="#ffffff">
 	<div class="background"
 		style="margin-left: auto; margin-right: auto; margin-top: 0px; margin-bottom: 0px; max-width: 1120px;">
-		<h1 align="center">Favourites/Likes</h1>
-		<table id="tbl2" border="1" style="width: 100%">
-			<tr>
-				<td>
-					<div
-						style="display: inline; margin-left: 10px; float: left; width: 130px;">
-						<a href="#" th:href="@{/main}"
-							th:text="#{main}"> Main page </a>
-					</div>
-				</td>
-			</tr>
-		</table>
+		<h1 align="center">Your favourites/likes</h1>
 		<table id="tbl" border="1" style="width: 100%">
 			<tr>
 				<th>Author</th>
-				<th>Books</th>
+				<th>Book</th>
 			</tr>
 		</table>
 	</div>
